# ObjectGenoise

./: .gitignore  CMakeLists.txt  OG.sln  README.md
core/: CMakeLists.txt  core.vcxproj  core.vcxproj.filters
core/include/og/: og_converter.h  og_internal_schema_property.h  og_schema.h  og_schema_object.h  og_schema_parameter.h  og_schema_relation.h  og_session.h  og_session_object.h  og_session_parameter.h  og_session_relation.h  og_transaction.h
core/include/og/core/: base.h  exception.h  fetcher.h  mapping.h  multiplicity.h  og.h  schema.h  schema_base.h  schema_object.h  schema_parameter.h  schema_relation.h  schema_sql.h  serializer.h  session.h  session_base.h  session_object.h  session_parameter.h  session_relation.h  transaction.h  where_condition.h  xml_stream.h
core/src/: og_schema.cpp  og_schema_object.cpp  og_schema_parameter.cpp  og_schema_relation.cpp  og_session.cpp  og_session_object.cpp  og_session_parameter.cpp  og_session_relation.cpp  og_transaction.cpp  schema.cpp  schema_base.cpp  schema_object.cpp  schema_parameter.cpp  schema_relation.cpp  session.cpp  session_object.cpp  session_parameter.cpp  session_relation.cpp  transaction.cpp
etc/: boost_build.bat  env.bat  og_setup.iss  og_setup_32bit.iss
etc/Script/: og_setup.iss
etc/boost/: boost_setup.iss  env.bat  link.bat  run.bat
lib/: copy.bat
og-net/: CMakeLists.txt  ReadMe.txt  keyfile.snk  og-net.vcxproj  og-net.vcxproj.filters
og-net/include/og/net/: OGConverter.h  OGException.h  OGSchema.h  OGSchemaObject.h  OGSchemaParameter.h  OGSchemaRelation.h  OGSession.h  OGSessionObject.h  OGSessionParameter.h  OGSessionRelation.h  OGSharedPtr.h  OGTransaction.h  Stdafx.h
og-net/src/: AssemblyInfo.cpp  OGConverter.cpp  OGException.cpp  OGSchema.cpp  OGSchemaObject.cpp  OGSchemaParameter.cpp  OGSchemaRelation.cpp  OGSession.cpp  OGSessionObject.cpp  OGSessionParameter.cpp  OGSessionRelation.cpp  OGTransaction.cpp  Stdafx.cpp
sql/: OG-Schema.sql  conv.sh  db.eap  og.db  og_src.db
test-core/: CMakeLists.txt  test-core.vcxproj  test-core.vcxproj.filters
test-core/include/: fixtures.h  og_session_object_comparer.h  utility.h
test-core/src/: test.vcxproj  test.vcxproj.filters  testmain.cpp  unittest_basic.cpp  unittest_etc.cpp  unittest_import_export.cpp  unittest_large_data.cpp  unittest_multi_language.cpp  unittest_schema.cpp  unittest_session.cpp  unittest_transaction.cpp
test-og-net/: CMakeLists.txt  UnitTest_Etc.cs  UnitTest_Import_Export.cs  UnitTest_LargeData.cs  UnitTest_MultiLanguage.cs  UnitTest_Schema.cs  UnitTest_Session.cs  UnitTest_Transaction.cs  project.db  test-og.net.csproj
test-og-net/Properties/: AssemblyInfo.cs
util/SchemaUpdater/: Program.cs  SchemaUpdater.csproj  SchemaUpdater.sln
util/SchemaUpdater/Properties/: AssemblyInfo.cs
util/db-updater/: CMakeLists.txt  db-updater.cpp  db-updater.filters  db-updater.vcxproj
